<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/deck_navigation"
        android:title="@string/deck"
        android:icon="@drawable/ic_list"/>

    <item
        android:id="@+id/card_navigation"
        android:title="@string/card"
        android:icon="@drawable/ic_book"/>

    <item
        android:id="@+id/settings_navigation"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"/>
</menu>
