<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardDeleteDialogLayoutId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".card.DialogDeleteCard">

    <LinearLayout
        android:id="@+id/linerLayoutDelete"
...
                android:shadowRadius="3"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:backgroundTint="@null"/>

            <Button
                android:id="@+id/button_no"
                android:layout_width="97dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="sans-serif"
                android:text="@string/no"
...
